--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title></title>
   </head>
   <body>
-    <script src='/js/main.js'></script>
+    <script src='main.js'></script>
     <h1>Test API Server</h1>
     <!-- <script src='js/main.js'></script>
     <form action="/quotes" method="POST">
