--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <title></title>
   </head>
   <body>
-    <script src='main.js'></script>
+    <!-- <script src='main.js'></script> -->
     <h1>Test API Server</h1>
-    <!-- <script src='js/main.js'></script>
-    <form action="/quotes" method="POST">
+    <form action="https://franksfirstapi.herokuapp.com/api/herbs/" method="POST">
       <input type="text" placeholder="name" name="name">
       <button type="submit">Submit</button>
-    </form> -->
+    </form>
+
 
 
   </body>
